[gd_scene load_steps=3 format=3 uid="uid://d2gmyhoxuta4a"]

[ext_resource type="Script" path="res://Scripts/Menus/pause_menu.gd" id="1_c35h2"]
[ext_resource type="PackedScene" uid="uid://bh2h3wmow36ly" path="res://Scenes/Menus/menu_button.tscn" id="1_s2wac"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c35h2")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 555.0
offset_right = -555.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 600)
layout_mode = 2
color = Color(0.278431, 0.278431, 0.278431, 0.627451)

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 126
text = "Pausa"

[node name="AudioMenu" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/AudioMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 61
text = "Audio
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music" type="HBoxContainer" parent="CenterContainer/VBoxContainer/AudioMenu"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/AudioMenu/Music"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "MÃºsica"
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="CenterContainer/VBoxContainer/AudioMenu/Music"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
rounded = true

[node name="SFX" type="HBoxContainer" parent="CenterContainer/VBoxContainer/AudioMenu"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/AudioMenu/SFX"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "SFX"
vertical_alignment = 1

[node name="SFXSlider" type="HSlider" parent="CenterContainer/VBoxContainer/AudioMenu/SFX"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
rounded = true

[node name="Continue" parent="CenterContainer/VBoxContainer" instance=ExtResource("1_s2wac")]
unique_name_in_owner = true
layout_mode = 2
text = "Continuar"

[node name="Exit" parent="CenterContainer/VBoxContainer" instance=ExtResource("1_s2wac")]
unique_name_in_owner = true
layout_mode = 2
text = "Salir"

[connection signal="value_changed" from="CenterContainer/VBoxContainer/AudioMenu/Music/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/AudioMenu/SFX/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
